--- a/examples/callback-example.html
+++ b/examples/callback-example.html
@@ -5,19 +5,29 @@
     <title>Callback usage example</title>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="../xtemplate.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
 </head>
 <body>
+    <a href="https://github.com/diegolamonica/XTemplate"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 
     <script type="text/x-template" id="country-template">
         and I am from {$country}
     </script>
     <script type="text/x-template" id="name-template">
-        Hello, my name is {$name}
-        {#country-template}<br />
+        <div class="row">
+            Hello, my name is {$name}
+            {#country-template}
+        </div>
     </script>
 
-    <div id="my-section"></div>
+    <div class="container">
 
+            <h1>XTemplate - Using Callback</h1>
+            <div id="my-section"></div>
+
+    </div>
     <script type="text/javascript">
 
         function myDataCallback(row) {
