--- a/examples/functions.html
+++ b/examples/functions.html
@@ -5,26 +5,40 @@
     <title>Expression evaluation</title>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="../xtemplate.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
 </head>
 <body>
+    <a href="https://github.com/diegolamonica/XTemplate"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 
     <script type="text/x-template" id="functions-template">
         <pre>
             Math: 3 + 4 = {=3+4}
-            Check XMLHttpRequest : {=typeof(document.XMLHttpRequest)}
-            Check XMLHttpRequest : {=typeof(XMLHttpRequest)}
+            Check XMLHttpRequest (trhough window) : {=typeof(window.XMLHttpRequest)}
+            Check XMLHttpRequest (through document.defaultView): {=typeof(document.defaultView.XMLHttpRequest)}
+            Check XMLHttpRequest (direct access): {=typeof(XMLHttpRequest)}
+
+            Check setTimeout {=typeof(setTimeout)}
+            Check setInterval {=typeof(setInterval)}
+            Check addEventListener {=typeof(addEventListener)}
+
+            Play with unicode chars {='&#123;&#36;bvar1&#125; is ' + var1}
 
             var1+var2 : {=var1+var2}
 
             {=window.location.href}
         </pre>
     </script>
-
-    <div id="my-section"></div>
-
+    <div class="container">
+        <div class="row">
+            <h1>XTemplate - Safe eval</h1>
+            <div id="my-section"></div>
+        </div>
+    </div>
     <script type="text/javascript">
 
-        var x = new Xtemplate(),
+        var x = new Xtemplate(true),
 
             output = x.apply('#functions-template', {
                 var1: 1,
@@ -33,5 +47,6 @@
 
         $('#my-section').html(output);
     </script>
+
 </body>
 </html>
