--- a/examples/translations.html
+++ b/examples/translations.html
@@ -5,21 +5,34 @@
     <title>Translations example</title>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="../xtemplate.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
 </head>
 <body>
+    <a href="https://github.com/diegolamonica/XTemplate"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+
     <script type="text/x-template" id="name-template" data-lang="hello-name.js">
         <div>
             {:hello} {$name}!
             {:theCountry}
         </div>
     </script>
-    <div id="my-section">not working</div>
+    <div class="container">
+        <h1>XTemplate - Working with translations</h1>
 
-    <div id="my-section-2">Click on the link below</div>
+        <div id="my-section" class="row">
+            not working
+        </div>
+        <div class="row">
+            Click on one of the following links to change translation
+            <a href="#" data-lang="it_IT">Italian</a>
+            <a href="#" data-lang="en_US">English</a>
+        </div>
 
-    <p>
-        <a href="#">Click me!</a>
-    </p>
+
+    </div>
+
 
     <script type="text/javascript">
 
@@ -35,7 +48,11 @@
         $('#my-section').html(output);
 
         $('a').on('click', function(){
-            x.setLang('it_IT');
+
+            event.preventDefault();
+
+            var lang = $(this).data('lang');
+            x.setLang(lang);
             var out = x.apply('#name-template', row);
             $('#my-section').html(out);
         });
