--- a/examples/translations.html
+++ b/examples/translations.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <title>Translations example</title>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../xtemplate.js"></script>
+    <script src="http://diegolamonica.info/demo/SourceViewer/sourceviewer.js"></script>
+
+    <link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />
+    <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
+    <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shAutoloader.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
+    <style>
+        div#example {
+            border-radius: 10px;
+            border: 2px dashed #ddd;
+            margin: 1em;
+            padding: 1em;
+        }
+    </style>
 </head>
 <body>
-    <a href="https://github.com/diegolamonica/XTemplate"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 
     <script type="text/x-template" id="name-template" data-lang="hello-name.js">
         <div>
@@ -19,45 +31,112 @@
         </div>
     </script>
     <div class="container">
-        <h1>XTemplate - Working with translations</h1>
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="./">XTemplate</a>
+                </div>
+                <p class="navbar-text">Working with translations</p>
 
-        <div id="my-section" class="row">
-            not working
+            </div><!-- /.container-fluid -->
+        </nav>
+
+        <div class="row" id="example">
+            <div class="col-md-12" id="my-section">
+                This text will be replaced
+            </div>
+
+            <div class="col-md-12">
+                Click on one of the following links to change translation
+                <a href="#" data-lang="it_IT">Italian</a>
+                <a href="#" data-lang="en_US">English</a>
+            </div>
+
         </div>
+
         <div class="row">
-            Click on one of the following links to change translation
-            <a href="#" data-lang="it_IT">Italian</a>
-            <a href="#" data-lang="en_US">English</a>
+            <div class="well well-lg">
+
+                <h1>Did you enjoyed this example?</h1>
+                <p>
+                    Producing this library and an example like this, bring me a lot of time away from me, so I need to
+                    know how many this library is of community interest to program its evolutions, updates and upgrades.
+                </p>
+                <p>
+                    Then I'm asking you to perform 3 simple things to demonstrate your interest:
+                </p>
+                <ol>
+                    <li><a target="_blank" href="https://github.com/diegolamonica/XTemplate">Star</a> (and watch) this library on GitHub</li>
+                    <li><a target="_blank" href="https://twitter.com/jast">Follow me</a> on Twitter</li>
+                    <li>Add a like to <a target="_blank" href="https://www.facebook.com/DiegoLaMonica.FanPage">my Facebook page</a></li>
+                </ol>
+
+            </div>
+
         </div>
-
-
+        <!-- Source code viewer -->
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#js-code" data-toggle="tab">Javascript</a></li>
+            <li><a href="#xt-code" data-toggle="tab">Templates</a></li>
+            <li><a href="#json-ita" data-toggle="tab">hello-name.js (it_IT)</a></li>
+            <li><a href="#json-eng" data-toggle="tab">hello-name.js (en_US)</a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane active" id="js-code"><pre class="sh_javascript" id="js"></pre></div>
+            <div class="tab-pane" id="xt-code"><pre class="sh_html" id="xt"></pre></div>
+            <div class="tab-pane" id="json-ita"><pre class="sh_javascript">{
+    "hello": "Ciao! Io sono",
+    "theCountry": " Vivo in {$country}!"
+}</pre></div>
+            <div class="tab-pane" id="json-eng"><pre class="sh_javascript">{
+    "hello": "Hi! I am",
+    "theCountry": " I'm from {$country}"
+}</pre></div>
+        </div>
+        <!-- End source code -->
     </div>
 
 
-    <script type="text/javascript">
+    <script type="text/javascript" id="source-code">
 
+        function showExample() {
+            var x = new Xtemplate({
+                        debug: true,
+                        langPath: 'translations/',
+                        lang: 'en_US'
+                    }),
+                    row = {name: 'Diego', country: 'Italy'},
+                    output = x.apply('#name-template', row);
 
-        var x = new Xtemplate({
-                    debug: true,
-                    langPath: 'translations/',
-                    lang: 'en_US'
-                }),
-                row = { name: 'Diego', country: 'Italy'},
-                output = x.apply('#name-template', row);
+            $('#my-section').html(output);
 
-        $('#my-section').html(output);
+            $('a[data-lang]').on('click', function () {
 
-        $('a').on('click', function(){
+                event.preventDefault();
 
-            event.preventDefault();
-
-            var lang = $(this).data('lang');
-            x.setLang(lang);
-            var out = x.apply('#name-template', row);
-            $('#my-section').html(out);
-        });
-
+                var lang = $(this).data('lang');
+                x.setLang(lang);
+                var out = x.apply('#name-template', row);
+                $('#my-section').html(out);
+            });
+        };
     </script>
+
+    <link rel="stylesheet" type="text/css" href="http://shjs.sourceforge.net/css/sh_nedit.min.css" />
+    <script type="text/javascript" src="http://shjs.sourceforge.net/sh_main.min.js"></script>
+    <script type="text/javascript" src="http://shjs.sourceforge.net/lang/sh_html.min.js"></script>
+    <script type="text/javascript" src="http://shjs.sourceforge.net/lang/sh_javascript.min.js"></script>
+
+    <script>
+        SourceViewer.createDisplayArea(null, 'xt', '#name-template', true);
+        SourceViewer.createDisplayArea(null, 'js', '#source-code');
+
+        showExample();
+        sh_highlightDocument();
+    </script>
+
+    <a href="https://github.com/diegolamonica/XTemplate"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 
 </body>
 </html>
