V 1.4.1 - Corrected some typos in documentation - Bugfix: in the `{=evaluation}` parsing, if the evaluated key is null then it was considered wrongly as undefined.

--- a/examples/conditions.html
+++ b/examples/conditions.html
@@ -85,7 +85,7 @@
                 <h1>Did you enjoyed this example?</h1>
                 <p>
                     Producing this library and an example like this, bring me a lot of time away from me, so I need to
-                    know how many this library is of community interest to program its evolutions, updates and upgrades.
+                    know how much this library is of community interest to program its evolutions, updates and upgrades.
                 </p>
                 <p>
                     Then I'm asking you to perform 3 simple things to demonstrate your interest:
