V 1.5 - Enabled automatic translation action on setting new language - Now translation files are loaded in async mode (better than the deprecated sync mode) - **New:** now you can add your own placeholder activators simply - Added new methods `register` and `unregister` to manage custom placeholder activatos - Added new method `isTranslationReady` - Removed some debug messages - Added other debug messages - Updated documentation - Updated example file `translations.html` - Added example file `autotranslate.html` - Added example file `custom-placeholders.html`

--- a/examples/index.html
+++ b/examples/index.html
@@ -54,9 +54,11 @@
                         {url: 'subtemplate-basic.html', title: 'Subtemplate example #1'},
                         {url: 'subtemplate-advanced.html', title: 'Subtemplate example #2'},
                         {url: 'callback-example.html', title: 'Callback Example to alter the row'},
-                        {url: 'functions.html', title: 'Evaluate expressions in template (safe eval)'},
-                        {url: 'translations.html', title: 'Working with translation files'},
-                        {url: 'invoice.html', title: 'XTemplate in real context'},
+                        {url: 'functions.html', title: 'Evaluate expressions in template with safe eval (since v 1.1)'},
+                        {url: 'translations.html', title: 'Working with translation files (since v 1.2)'},
+                        {url: 'invoice.html', title: 'XTemplate in real context (since v 1.4)'},
+                        {url: 'autotranslate.html', title: 'Simplify the translations on page (since v 1.5)'},
+                        {url: 'custom-placeholders.html', title: 'Custom placeholder activators (since v 1.5)'},
 
                     ];
 
