--- a/examples/autotranslate.html
+++ b/examples/autotranslate.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Invoice Example</title>
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../xtemplate.js"></script>
@@ -198,7 +199,7 @@
                     </button>
                     <a class="navbar-brand" href="./">XTemplate</a>
                 </div>
-                <p class="navbar-text">how would it be in a real world usage?</p>
+                <p class="navbar-text">Automatic translation of contents?</p>
 
             </div><!-- /.container-fluid -->
         </nav>
@@ -209,8 +210,7 @@
                 <a href="#" class="ch-lang" data-lang="en_US">English</a>
             </p>
             <div class="col-md-12" id="my-section">
-                <p>Rendering in progress...</p>
-                <p>However if the browser has removed the <code>async</code> argument for AJAX requests, this example could not work.</p>
+                Rendering in progress...
             </div>
         </div>
         <div class="row">
@@ -219,7 +219,7 @@
                 <h1>Did you enjoyed this example?</h1>
                 <p>
                     Producing this library and an example like this, bring me a lot of time away from me, so I need to
-                    know how many this library is of community interest to program its evolutions, updates and upgrades.
+                    know how much this library is of community interest to program its evolutions, updates and upgrades.
                 </p>
                 <p>
                     Then I'm asking you to perform 3 simple things to demonstrate your interest:
@@ -302,10 +302,10 @@
 
         function showExample() {
             var x = new Xtemplate({
-                        debug: false,
+                        debug: true,
                         langPath: 'translations/',
                         lang: 'it_IT',
-                        syncMode: true
+                        autotranslate: true
                     }),
                     invoice = {
                         number: 1,
@@ -331,9 +331,8 @@
                         annotations: 'Lorem ipsum dolor sit amet',
                         discount: '0.20'
                     },
-                    output = x.apply('#invoice-template', invoice);
+                    output = x.apply('#invoice-template', invoice, undefined, '#my-section');
 
-            $('#my-section').html(output);
 
 
             $('a[data-lang]').on('click', function () {
@@ -345,8 +344,7 @@
 
                 var lang = $(this).data('lang');
                 x.setLang(lang);
-                var out = x.apply('#invoice-template', invoice);
-                $('#my-section').html(out);
+
             });
         }
     </script>
@@ -357,6 +355,7 @@
     <script type="text/javascript" src="http://shjs.sourceforge.net/lang/sh_javascript.min.js"></script>
 
     <script>
+
         SourceViewer.createDisplayArea(null, 'xt1', '#invoice-template', true);
         SourceViewer.createDisplayArea(null, 'xt2', '#rows-template', true);
         SourceViewer.createDisplayArea(null, 'xt3', '#invoice-header-template', true);
@@ -366,7 +365,7 @@
         SourceViewer.createDisplayArea(null, 'js', '#source-code');
 
         showExample();
-        sh_highlightDocument();
+  //      sh_highlightDocument();
     </script>
 
     <a href="https://github.com/diegolamonica/XTemplate"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
