--- a/examples/custom-placeholders.html
+++ b/examples/custom-placeholders.html
@@ -2,15 +2,11 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Translations example</title>
+    <title>Using custom placeholders</title>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../xtemplate.js"></script>
     <script src="http://diegolamonica.info/demo/SourceViewer/sourceviewer.js"></script>
-
-    <link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />
-    <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
-    <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shAutoloader.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <style>
@@ -24,35 +20,29 @@
 </head>
 <body>
 
-    <script type="text/x-template" id="name-template" data-lang="hello-name.js">
-        <div>
-            {:hello} {$name}!
-            {:theCountry}
-        </div>
-    </script>
+
     <div class="container">
+
         <nav class="navbar navbar-default" role="navigation">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <a class="navbar-brand" href="./">XTemplate</a>
                 </div>
-                <p class="navbar-text">Working with translations</p>
-
-            </div><!-- /.container-fluid -->
+                <p class="navbar-text">Using custom placeholders</p>
+            </div>
         </nav>
 
         <div class="row" id="example">
             <div class="col-md-12" id="my-section">
                 This text will be replaced
             </div>
-
-            <div class="col-md-12">
-                Click on one of the following links to change translation
-                <a href="#" data-lang="it_IT">Italian</a>
-                <a href="#" data-lang="en_US">English</a>
-            </div>
-
         </div>
 
         <div class="row">
@@ -79,47 +69,61 @@
         <ul class="nav nav-tabs">
             <li class="active"><a href="#js-code" data-toggle="tab">Javascript</a></li>
             <li><a href="#xt-code" data-toggle="tab">Templates</a></li>
-            <li><a href="#json-ita" data-toggle="tab">hello-name.js (it_IT)</a></li>
-            <li><a href="#json-eng" data-toggle="tab">hello-name.js (en_US)</a></li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane active" id="js-code"><pre class="sh_javascript" id="js"></pre></div>
             <div class="tab-pane" id="xt-code"><pre class="sh_html" id="xt"></pre></div>
-            <div class="tab-pane" id="json-ita"><pre class="sh_javascript">{
-    "hello": "Ciao! Io sono",
-    "theCountry": " Vivo in {$country}!"
-}</pre></div>
-            <div class="tab-pane" id="json-eng"><pre class="sh_javascript">{
-    "hello": "Hi! I am",
-    "theCountry": " I'm from {$country}"
-}</pre></div>
         </div>
         <!-- End source code -->
+
     </div>
 
+    <script type="text/x-template" id="hello-name-template">
+        <div class="row">
+            {/javascript}
+            var hello = "Hello world!";
+            {\javascript}
 
+            {/html}
+            <div style="width: 20%">Lorem ipsum dolor sit amet!</div>
+            {\html}
+        </div>
+
+        {%Hello world!}
+        {%:TRANSLATION_STRING}
+    </script>
     <script type="text/javascript" id="source-code">
-
         function showExample() {
-            var x = new Xtemplate({
-                    debug: true,
-                    langPath: 'translations/',
-                    lang: 'en_US',
-                    replaceContents: true
-                }),
-                row = {name: 'Diego', country: 'Italy'};
-            x.apply('#name-template', row, undefined,'#my-section');
 
-            $('a[data-lang]').on('click', function () {
+            function codePlaceholder(matches, items, translations ){
+                console.log(matches);
+                var className = matches[2],
+                        output = '<pre class="sh_' + className + '">' +   matches[3].replace(/</g, "&lt;") + '</pre>';
 
-                event.preventDefault();
+                return output;
+            }
 
-                var lang = $(this).data('lang');
-                x.setLang(lang);
-                x.apply('#name-template', row, undefined, '#my-section');
+            function buttonPlaceholder(matches, items, translations){
 
-            });
-        };
+                if(matches[1] == '%:'){
+                    return '<a role="button" class="btn btn-primary">{:' + matches[2] + '}</a>';
+                }else{
+                    return '<a role="button" class="btn btn-primary">' + matches[2] + '</a>';
+                }
+
+
+            }
+
+            var x = new Xtemplate();
+
+            x.register( '%:', buttonPlaceholder, XTEMPLATE_PRIORITY_BEFORE_TRANSLATIONS);
+            x.register( '%', buttonPlaceholder, XTEMPLATE_PRIORITY_AFTER_VAR);
+            x.register( ['/', '\\', true], codePlaceholder, XTEMPLATE_PRIORITY_AFTER_VAR);
+
+            var output = x.apply('#hello-name-template', {});
+
+            $('#my-section').html(output);
+        }
     </script>
 
     <link rel="stylesheet" type="text/css" href="http://shjs.sourceforge.net/css/sh_nedit.min.css" />
@@ -128,7 +132,7 @@
     <script type="text/javascript" src="http://shjs.sourceforge.net/lang/sh_javascript.min.js"></script>
 
     <script>
-        SourceViewer.createDisplayArea(null, 'xt', '#name-template', true);
+        SourceViewer.createDisplayArea(null, 'xt', '#hello-name-template', true);
         SourceViewer.createDisplayArea(null, 'js', '#source-code');
 
         showExample();
